fix find replace in dark mode

--- a/apps/style/javalab/style.scss
+++ b/apps/style/javalab/style.scss
@@ -83,6 +83,11 @@
     border-radius: 0px;
     margin-right: 0px;
   }
+
+  .cm-textfield::placeholder {
+    color: $light_gray;
+    opacity: 1;
+  }
 }
 
 /* Slider. */
